src/ui/assets/styles/components/_discite.scss
$module: 'discite';
// diss-it-ay

%disciteRowDiv {
	@include box-sizing(border-box);
	position: relative;
	display: block;
	float: none;
	padding: 10px 0;

	@include media(desktop) {
		display: inline-block;
		float: left;
		padding: 10px 8px 10px 0;
	}
}

.#{$module} {
	// div.discite wrapper for all item
	position: relative;

	@include e(item) {
		// div.discite__item wrapper for individual item
		position: relative;
		min-height: 60px;
		margin-bottom: 10px;
		border-bottom: 1px solid $grey-2;

		&:last-of-type {
			border-bottom: 0;
		}
	}

	@include e(main) {
		// div.discite__main container for title and action
		@extend %disciteRowDiv;

		@include media(desktop) {
			padding-right: 300px;
		}

		@include m(search) {
			padding-right: 100px;
		}
	}

	@include e(heading) {
		@include bold-19;
	}

	@include e(desc) {
		// div.discite__info container 150~ish chars of information/descrition
		@extend %disciteRowDiv;

		@include media(desktop) {
			padding-right: 300px;
		}

		@include m(search) {
			padding-right: 100px;
		}
	}

	@include e(properties) {
		// div.discite__properties container for various data about the discite thing
		@extend %disciteRowDiv;

		width: 100%;
		clear: both;
		min-height: 50px;

		@include media(desktop) {
			position: absolute;
			display: block;
			width: 280px;
			float: none;
			top: 0;
			right: 0;
			padding-right: 0;
		}
	}

	@include e(property) {
		// ul.discite__property the actual data about the discite thing
		width: 100%;
		float: left;

		.badge {
			//this should not be here, .badge is being imported too late in main.scss
			@include m(discite) {
				margin-bottom: 0;
			}
		}

		@include m(search) {
			@include media(desktop) {
				width: 200px;
				float: right;
				text-align: right;
			}
		}
	}

	@include e(property-item) {
		// div.discite__property-item
		@include core-16;
	}

	@include e(status) {
		// div.discite__status usually a badge saying in progress|overdue|completed etc
		@extend %disciteRowDiv;
		position: absolute;
		width: 50%;
		text-align: right;
		padding-right: 0;
		padding-top: 6px;

		@include media(mobile) {
			left: 50%;
			text-align: left;
		}
		@include media(tablet) {
			width: 100%;
			display: block;
			float: none;
			padding-top: 16px;
			padding-bottom: 0;
			top: 0;
			right: 0;
		}

		& > .meta {
			margin-top: 4px;
		}

		@include m(search) {
			@include media(tablet) {
				position: relative;
			}
			position: absolute;
		}
	}

	@include e(area) {
		//div.discite__area
		@extend %disciteRowDiv;
		@include core-16;
		padding-top: 0;
		padding-bottom: 0;

		@include media(desktop) {
			width: 100%;
			display: block;
			float: none;
			clear: both;
			padding-right: 300px;
		}

		@include m(search) {
			padding-right: 0px;
		}
	}

	@include e(counter) {
		margin-bottom: 0;

		@include m(search) {
			padding-top: 10px;
		}
	}

	@include e(action) {
		//div.discite__action
		@extend %disciteRowDiv;
		clear: both;

		a {
			display: inline-block;
			margin-right: 8px;
		}

		@include media(desktop) {
			display: block;
			float: none;
		}
	}

	@include e(description) {
		margin-bottom: 0;
	}
}

